fix: Ajuste upload dos arquivos, e criado tbm o docker-compose.yml e o Dockerfile

--- a/templates/cliente/create.html.twig
+++ b/templates/cliente/create.html.twig
@@ -27,10 +27,10 @@
             
             {{ form_widget(form) }}
             
-            <div class="form-group">
+            {# <div class="form-group">
                 <label for="usuarios_foto">Foto</label><br>
                 <input type="file" class="form-control-file" id="usuarios_foto" name="foto" />
-            </div>
+            </div> #}
 
             <div class="pull-right">
                 <a href="{{ path("app_clientes")}}" class="btn btn-light" title="Cancelar"><i class="fa fa-arrow-left"></i>&nbsp;Cancelar</a>
